--- a/zy-ebusiness/pom.xml
+++ b/zy-ebusiness/pom.xml
@@ -8,4 +8,12 @@
   
 	<artifactId>zy-ebusiness</artifactId>
 	<packaging>war</packaging>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+	</dependencies>
 </project>
