--- a/zy-ebusiness/pom.xml
+++ b/zy-ebusiness/pom.xml
@@ -5,9 +5,13 @@
 	    <artifactId>zy-root</artifactId>
 	    <version>1.0.0.RELEASE</version>
   	</parent>
-  
+  	
 	<artifactId>zy-ebusiness</artifactId>
 	<packaging>war</packaging>
+	
+	<properties>
+		<jetty.version>9.2.6.v20141205</jetty.version>	
+  	</properties>
 	
 	<dependencies>
 		<dependency>
@@ -16,4 +20,23 @@
 			<version>2.6.1</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>			
+        	<!-- jetty插件, 设定context path与spring profile -->
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<httpConnector>
+						<port>80</port>
+					</httpConnector>
+					<webAppConfig> 
+						<contextPath>/ebusiness</contextPath> 
+					</webAppConfig>
+				</configuration>
+			</plugin> 
+		</plugins>
+	</build>	
 </project>
